tests/rosetta/out/Fortran/animation.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/animation.f90:18:11:

   18 |     line = ''
      |           1
Error: Cannot convert CHARACTER(0) to INTEGER(4) at (1)
/workspace/mochi/tests/rosetta/out/Fortran/animation.f90:22:13:

   22 |       line = line // trim(msg((idx)+1:(idx + 1)))
      |             1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(*)
