tests/rosetta/out/Fortran/animation.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program animation
  implicit none
  character(len=100) :: msg
  integer :: shift
  integer :: inc
  integer :: clicks
  integer :: frames
    integer :: line
    integer :: i
      integer :: idx
  msg = 'Hello World! '
  shift = 0
  inc = 1
  clicks = 0
  frames = 0
  do while ((clicks < 5))
    line = ''
    i = 0
    do while ((i < len(msg)))
      idx = mod(((shift + i)),len(msg))
      line = line // trim(msg((idx)+1:(idx + 1)))
      i = (i + 1)
    end do
    print *, line
    shift = mod(((shift + inc)),len(msg))
    frames = (frames + 1)
    if ((mod(frames,len(msg)) == 0)) then
      inc = (len(msg) - inc)
      clicks = (clicks + 1)
    end if
  end do
end program animation
